conflict created in branch

--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <p>this is last + para</p>
         <p>i again added another para</p>
         <p>today i created a branch</p>
-        <p>branch has been successfuly created.</p>
+        <p>branch has been successfuly created. i am bringing conflict in branch now.</p>
         </body>
 
 </html>
