--- a/home.html
+++ b/home.html
@@ -7,7 +7,7 @@
         <p>this is last + para</p>
         <p>i again added another para</p>
         <p>today i created a branch</p>
-        <p>branch has been successfuly created. i am going to resolve conflict later</p>
+        <p>lets try again. cant see conflict in web. i am going to resolve conflict later</p>
         </body>
 
 </html>
