cannot see conflict in web

--- a/home.html
+++ b/home.html
@@ -4,10 +4,10 @@
         <p>this is paragraph</p>
         <p>this is also paragraph</p>
         <p>this is last paragraph</p>
-        <p>this is last + para</p>
+        <p></p>
         <p>i again added another para</p>
         <p>today i created a branch</p>
-        <p>lets try again. cant see conflict in web. i am going to resolve conflict later</p>
+        <p>lets try again. cant see conflict in web. why can;t i see conflict in web</p>
         </body>
 
 </html>
