after resolving conflict

--- a/home.html
+++ b/home.html
@@ -8,6 +8,7 @@
         <p>i again added another para</p>
         <p>today i created a branch</p>
         <p>lets try again. cant see conflict in web. why can;t i see conflict in web</p>
+        <p>this para is after resolving conflict</p>
         </body>
 
 </html>
