added para in main only

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
         <p>branch has been successfuly created. i am bringing conflict in branch now.</p>
 
         <p>lets try again. cant see conflict in web. why can;t i see conflict in web</p>
+        <p>added para in main only but not in 1stbranch</p>
 
         </body>
 
