check for commit

--- a/home.html
+++ b/home.html
@@ -9,6 +9,7 @@
         <p>today i created a branch</p>
         <p>lets try again. cant see conflict in web. why can;t i see conflict in web</p>
         <p>this para is after resolving conflict</p>
+        <p>read commit</p>
         </body>
 
 </html>
